--- a/buildquote/package.json
+++ b/buildquote/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.78.0",
+    "@vercel/blob": "^2.3.0",
     "convex": "^1.32.0",
     "next": "16.1.6",
     "pdf-lib": "^1.17.1",
